@@ -72,7 +72,7 @@ class UserPrefBase(object):
             preferences forms and then call make_row(). See
             existing plugins, e.g. changepass.py.
         '''
-        action = self.request.page.url(self.request, relative=False)
+        action = self.request.page.url(self.request)
         _form = html.FORM(action=action)
         _form.append(html.INPUT(type="hidden", name="action", value="userprefs"))
         _form.append(html.INPUT(type="hidden", name="handler", value=self.name))
